<resources>
    <string name="app_name">Hospital_DB</string>
    <string name="enter_name">Enter Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="appointment">Appointment</string>
    <string name="opd">OPD</string>
    <string name="select_date">Select Date</string>
    <string name="pick_date">Pick Date</string>
    <string name="clear_all">Clear All</string>
    <string name="proceed">Proceed</string>
    <string name="edit_data">Edit Data</string>
</resources>